shorten the build by not building aiter and flash attention for now
Signed-off-by: tjtanaa <tunjian.tan@embeddedllm.com>

--- a/docker/Dockerfile.rocm_base
+++ b/docker/Dockerfile.rocm_base
@@ -300,55 +300,55 @@ RUN cd /opt/rixl && mkdir -p /app/install && \
         --nixl-plugins-dir ${RIXL_HOME}/lib/x86_64-linux-gnu/plugins
 
 
-###
-### FlashAttention Build
-###
-FROM base AS build_fa
-ARG FA_BRANCH
-ARG FA_REPO
-ARG USE_SCCACHE
-RUN --mount=type=bind,from=build_pytorch,src=/app/install/,target=/install \
-    pip install /install/*.whl
-RUN git clone ${FA_REPO}
-RUN cd flash-attention \
-    && git checkout ${FA_BRANCH} \
-    && git submodule update --init \
-    && if [ "$USE_SCCACHE" = "1" ]; then \
-           export CMAKE_C_COMPILER_LAUNCHER=sccache \
-           && export CMAKE_CXX_COMPILER_LAUNCHER=sccache \
-           && export CMAKE_HIP_COMPILER_LAUNCHER=sccache \
-           && sccache --show-stats; \
-       fi \
-    && GPU_ARCHS=$(echo ${PYTORCH_ROCM_ARCH} | sed -e 's/;gfx1[0-9]\{3\}//g') python3 setup.py bdist_wheel --dist-dir=dist \
-    && if [ "$USE_SCCACHE" = "1" ]; then sccache --show-stats; fi
-RUN mkdir -p /app/install && cp /app/flash-attention/dist/*.whl /app/install
+# ###
+# ### FlashAttention Build
+# ###
+# FROM base AS build_fa
+# ARG FA_BRANCH
+# ARG FA_REPO
+# ARG USE_SCCACHE
+# RUN --mount=type=bind,from=build_pytorch,src=/app/install/,target=/install \
+#     pip install /install/*.whl
+# RUN git clone ${FA_REPO}
+# RUN cd flash-attention \
+#     && git checkout ${FA_BRANCH} \
+#     && git submodule update --init \
+#     && if [ "$USE_SCCACHE" = "1" ]; then \
+#            export CMAKE_C_COMPILER_LAUNCHER=sccache \
+#            && export CMAKE_CXX_COMPILER_LAUNCHER=sccache \
+#            && export CMAKE_HIP_COMPILER_LAUNCHER=sccache \
+#            && sccache --show-stats; \
+#        fi \
+#     && GPU_ARCHS=$(echo ${PYTORCH_ROCM_ARCH} | sed -e 's/;gfx1[0-9]\{3\}//g') python3 setup.py bdist_wheel --dist-dir=dist \
+#     && if [ "$USE_SCCACHE" = "1" ]; then sccache --show-stats; fi
+# RUN mkdir -p /app/install && cp /app/flash-attention/dist/*.whl /app/install
 
 
-###
-### AITER Build
-###
-FROM base AS build_aiter
-ARG AITER_BRANCH
-ARG AITER_REPO
-ARG USE_SCCACHE
-RUN --mount=type=bind,from=build_pytorch,src=/app/install/,target=/install \
-    pip install /install/*.whl
-RUN git clone --recursive ${AITER_REPO}
-RUN cd aiter \
-    && git checkout ${AITER_BRANCH} \
-    && git submodule update --init --recursive \
-    && pip install -r requirements.txt
-RUN pip install pyyaml && cd aiter \
-    && if [ "$USE_SCCACHE" = "1" ]; then \
-           export CMAKE_C_COMPILER_LAUNCHER=sccache \
-           && export CMAKE_CXX_COMPILER_LAUNCHER=sccache \
-           && export CMAKE_HIP_COMPILER_LAUNCHER=sccache \
-           && sccache --show-stats; \
-       fi \
-    && PREBUILD_KERNELS=1 GPU_ARCHS=${AITER_ROCM_ARCH} python3 setup.py bdist_wheel --dist-dir=dist \
-    && if [ "$USE_SCCACHE" = "1" ]; then sccache --show-stats; fi \
-    && ls /app/aiter/dist/*.whl
-RUN mkdir -p /app/install && cp /app/aiter/dist/*.whl /app/install
+# ###
+# ### AITER Build
+# ###
+# FROM base AS build_aiter
+# ARG AITER_BRANCH
+# ARG AITER_REPO
+# ARG USE_SCCACHE
+# RUN --mount=type=bind,from=build_pytorch,src=/app/install/,target=/install \
+#     pip install /install/*.whl
+# RUN git clone --recursive ${AITER_REPO}
+# RUN cd aiter \
+#     && git checkout ${AITER_BRANCH} \
+#     && git submodule update --init --recursive \
+#     && pip install -r requirements.txt
+# RUN pip install pyyaml && cd aiter \
+#     && if [ "$USE_SCCACHE" = "1" ]; then \
+#            export CMAKE_C_COMPILER_LAUNCHER=sccache \
+#            && export CMAKE_CXX_COMPILER_LAUNCHER=sccache \
+#            && export CMAKE_HIP_COMPILER_LAUNCHER=sccache \
+#            && sccache --show-stats; \
+#        fi \
+#     && PREBUILD_KERNELS=1 GPU_ARCHS=${AITER_ROCM_ARCH} python3 setup.py bdist_wheel --dist-dir=dist \
+#     && if [ "$USE_SCCACHE" = "1" ]; then sccache --show-stats; fi \
+#     && ls /app/aiter/dist/*.whl
+# RUN mkdir -p /app/install && cp /app/aiter/dist/*.whl /app/install
 
 
 ###
@@ -361,14 +361,14 @@ FROM base AS debs_wheel_release
 RUN mkdir /app/debs
 RUN --mount=type=bind,from=build_triton,src=/app/install/,target=/install \
     cp /install/*.whl /app/debs
-RUN --mount=type=bind,from=build_fa,src=/app/install/,target=/install \
-    cp /install/*.whl /app/debs
+# RUN --mount=type=bind,from=build_fa,src=/app/install/,target=/install \
+#     cp /install/*.whl /app/debs
 RUN --mount=type=bind,from=build_amdsmi,src=/app/install/,target=/install \
     cp /install/*.whl /app/debs
 RUN --mount=type=bind,from=build_pytorch,src=/app/install/,target=/install \
     cp /install/*.whl /app/debs
-RUN --mount=type=bind,from=build_aiter,src=/app/install/,target=/install \
-    cp /install/*.whl /app/debs
+# RUN --mount=type=bind,from=build_aiter,src=/app/install/,target=/install \
+#     cp /install/*.whl /app/debs
 
 # Full debs stage - includes RIXL (used by Docker releases)
 FROM base AS debs
