Just to be safe
Signed-off-by: DarkLight1337 <tlleungac@connect.ust.hk>

--- a/.buildkite/test-amd.yaml
+++ b/.buildkite/test-amd.yaml
@@ -211,6 +211,7 @@ steps:
   - vllm/
   - tests/entrypoints/openai/responses
   commands:
+  - export VLLM_WORKER_MULTIPROC_METHOD=spawn
   - pytest -v -s entrypoints/openai/responses
 
 - label: Distributed Tests (4 GPUs) # 35min
